--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^2.1.0",
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
-    "mongoose": "^4.5.9",
-    "nodemon": "^1.10.2"
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.10.2",
+    "validator": "^10.9.0",
+    "winston": "^3.1.0"
   }
 }
