--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^2.1.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.15.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
